--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,46 @@
     <title>Document</title>
 </head>
 <body>
-    <b>Text</b>
-    <strong>Text</strong>
+    <div class = "task_1">
+        <h1><p>Заголовок 1 уровня</p></h1>
+        <h2><p><i>Заголовок 2 уровня</i></p></h2>
+        <h3><p>Заголовок 3 уровня</p></h3>
+        <h4><p>Заголовок 4 уровня</p></h4>
+        <h5><p>Заголовок 5 уровня</p></h5>
+        <h6><p>Заголовок 6 уровня</p></h6>
+    </div>
+    <div class = "task_2">
+        <p>
+            Язык гипертекстовой разметки HTML был разработан британским учёным Тимом Бернерсом-Ли 
+            приблизительно в 1986—1991 годах в стенах ЦЕРНа в Женеве в Швейцарии[3]. HTML создавался 
+            как язык для обмена научной и технической документацией, пригодный для использования людьми, 
+            не являющимися специалистами в области вёрстки. HTML успешно справлялся с проблемой сложности SGML 
+            путём определения небольшого набора структурных и семантических элементов — дескрипторов. 
+            Дескрипторы также часто называют «тегами». С помощью HTML можно легко создать относительно простой, 
+            но красиво оформленный документ. Помимо упрощения структуры документа, в HTML внесена поддержка гипертекста. 
+            Мультимедийные возможности были добавлены позже.
+            <q><i>
+                Мы не утописты. Мы знаем, что любой чернорабочий и любая кухарка не способны сейчас же вступить в управление государством. 
+                В этом мы согласны и с кадетам, и с Брешковской, и с Церетели. Но мы отличаемся от этих граждан тем, требуем немедленного 
+                разрыва с тем предрассудком, будто управлять государством, нести будничную, ежедневную работу управления в состоянии только 
+                богатые или из богатых семей взятые чиновники. Мы требуем, чтобы обучение делу государственного управления велось сознательными 
+                рабочими и солдатами и чтобы начато оно было немедленно, то есть к обучению этому немедленно начали привлекать всех трудящихся, 
+                всю бедноту.
+            </i></q>
+            Первым общедоступным описанием HTML был документ «Теги HTML», впервые упомянутый в Интернете Тимом Бернерсом-Ли 
+            в конце 1991 года,[4][5]. В нём описываются 18 элементов, составляющих первоначальный, относительно простой дизайн HTML. 
+            За исключением тега гиперссылки, на них сильно повлиял SGMLguid, внутренний формат документации, основанный на стандартном 
+            обобщенном языке разметки (SGML), в CERN. Одиннадцать из этих элементов всё ещё существуют в HTML 4[6].
+            Изначально язык HTML был задуман и создан как средство структурирования и форматирования документов 
+            без их привязки к средствам воспроизведения (отображения). В идеале, текст с разметкой HTML должен был 
+            без стилистических и структурных искажений воспроизводиться на оборудовании с различной технической 
+            оснащённостью (цветной экран современного компьютера, монохромный экран органайзера, ограниченный по размерам экран 
+            мобильного телефона или устройства и программы голосового воспроизведения текстов). 
+            Однако современное применение HTML очень далеко от его изначальной задачи. Например, 
+            тег предназначен для создания в документах таблиц, но иногда используется и для оформления
+            размещения элементов на странице. С течением времени основная идея платформонезависимости языка HTML
+            была принесена в жертву современным потребностям в мультимедийном и графическом оформлении. 
+        </p>
+    </div>
 </body>
 </html>
